presentation/robustExternalize/robExt-795718DEA53BF3C3C967AD85C9329052-compilation.log
  File "/Users/styczynski/Code/aadg-genomics-class/presentation/robustExternalize/robExt-795718DEA53BF3C3C967AD85C9329052.tex", line 103
    ax.set_xticklabels([i for range(len(cases))])
                              ^^^^^^^^^^^^^^^^^
SyntaxError: cannot assign to function call
